# datagovmy-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  appsec.yml  appspec.yml  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: workflow.yml
data/: dash_record.parquet  docs_mdx_record.parquet  faq.en.mdx  local_mdx_record.parquet
data/data-catalogue/: overview.en.mdx  sample-query.en.mdx
data/pages/: index.en.mdx  test.en.mdx
data/pages/data-catalogue/: request-query.en.mdx
requirements/: dev.txt  main.txt
scripts/: ingest.sh  post_install.sh  pre_install.sh  start.sh  stop.sh
scripts/weaviate/: .env.example  docker-compose.yml  setup_weaviate.py
src/: utils.py
src/assistant/: .env.example  Dockerfile  Dockerfile.cron  README.md  app.py  auth.py  chain.py  config.py  crontab  generate_meta.py  ingest.py  ingest.sh  loaders.py  prompts.py  pyproject.toml  requirements.txt  schema.py  setup.cfg  setup.py  vect.py
src/assistant/config/: ai-docs-api.service  ai-docs-pipeline.service
src/assistant/ingestion/: __init__.py  assets.py  sensors.py
src/assistant/scripts/: ingest.sh
src/assistant/utils/: cache.py  helpers.py  templates.py
src/docs_assistant/: .env.example  README.md  app.py  auth.py  chain.py  config.py  loaders.py  prompts.py  pyproject.toml  schema.py  setup.cfg  setup.py  utils.py  vect.py
src/docs_assistant/docs_pipeline/: __init__.py  assets.py  jobs.py  sensors.py
src/docs_assistant/scripts/: setup_weaviate.py
(+1 files in other folders)
