[project]
name = "datagovmy-ai"
version = "1.0"
dependencies = [
    "fastapi",
    "langchain",
    "faiss-cpu",
    "weaviate-client",
    "pandas",
    "openai",
    "pyarrow",
    "tiktoken",
    "redis",
    "fastapi-cache2[redis]",
    "uvicorn",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "locust", "pre-commit", "black"]
